2007-07-31  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: (about_me_image_clicked_cb): use
	g_get_user_special_dir() instead of hardcoding ~/Pictures

2007-07-23  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.glade: add a tooltip to the image button to make it
	accessible

2007-06-23  Guilherme de S. Pastore  <gpastore@gnome.org>

	* gnome-about-me-password.c: fix a small typo ("wether" -> "whether")
	  in the comments.

2007-04-30  Bastien Nocera  <hadess@hadess.net>

	* gnome-about-me.c: (about_me_update_photo): Use g_file_set_contents
	instead of a single fwrite to write the ~/.face image, also set the
	default permission to be 0644, even if the umask is more permissive,
	otherwise GDM won't show the icon in the chooser (Closes: #433898)

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-about-me.desktop.in.in: renamed Bugzilla product.

2007-04-21  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: (about_me_setup_dialog): don't print a warning to
	the console if the "self" contact does not yet exist (closes bug
	#419332). Also fix a small memory leak

2007-04-08  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Kristof Vansant <de_lupus@pandora.be>

	* gnome-about-me.c: (about_me_image_clicked_cb): add image filter to
	file chooser (closes bug #424958)

2007-03-19  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Bastien Nocera <hadess@hadess.net>

	* Makefile.am: don't try to build about-me if it's been disabled in
	configure and make is run in the subdir (closes bug #408552)

2007-03-04  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Andreas Koehler <andi5.py@gmx.net>

	* gnome-about-me.glade: use proper shadow type for the address fields
	(fixes bug #414061)

2007-02-27  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me-password.c: (stop_passwd),
	(free_passwd_resources), (passdlg_process_response): another attempt
	at fixing bug #411697. The previous commit fell a bit short

2007-02-26  Jens Granseuer  <jensgr@gmx.net>
