@@ -1,3 +1,8 @@
+2007-08-21  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-about-me.c: honour mail address attributes when setting
+	up Home and Work addresses
+
 2007-07-31  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-about-me.c: (about_me_image_clicked_cb): use
